# sapphire-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/sapphire-framework/: Cargo.toml
crates/sapphire-framework-backend/: Cargo.toml
crates/sapphire-framework-backend/src/: error.rs  lib.rs  local.rs  remote.rs  source.rs
crates/sapphire-framework-blob/: Cargo.toml
crates/sapphire-framework-blob/src/: error.rs  lib.rs
crates/sapphire-framework-remote-client/: Cargo.toml
crates/sapphire-framework-remote-client/src/: error.rs  lib.rs
crates/sapphire-framework-remote-client/tests/: roundtrip.rs
crates/sapphire-framework-remote-server/: Cargo.toml
crates/sapphire-framework-remote-server/src/: change_log.rs  error.rs  lib.rs  ws_store.rs
crates/sapphire-framework-remote-server/tests/: rpc.rs
crates/sapphire-framework-retrieve/: Cargo.toml
crates/sapphire-framework-retrieve/src/: chunker.rs  config.rs  db.rs  error.rs  lib.rs  redb_store.rs  retrieve_store.rs  sqlite_store.rs  vector_store.rs
crates/sapphire-framework-rpc/: Cargo.toml
crates/sapphire-framework-rpc/src/: jsonrpc.rs  lib.rs
crates/sapphire-framework-sync/: CHANGELOG.md  Cargo.toml
crates/sapphire-framework-sync/src/: change_source.rs  error.rs  lib.rs
crates/sapphire-framework-track/: Cargo.toml
crates/sapphire-framework-track/src/: error.rs  redb_store.rs
crates/sapphire-framework-workspace/: CHANGELOG.md  Cargo.toml
crates/sapphire-framework-workspace-cli/: Cargo.toml
crates/sapphire-framework-workspace-cli/src/: config.rs
crates/sapphire-framework-workspace-cli/src/commands/cache/: embed.rs  info.rs
crates/sapphire-framework-workspace/src/: config.rs  context.rs  error.rs  indexer.rs  lib.rs  workspace.rs  workspace_state.rs
crates/sapphire-framework/src/: lib.rs
crates/sapphire-retrieve/: CHANGELOG.md  Cargo.toml
crates/sapphire-retrieve/src/: chunker.rs  db.rs  lancedb_store.rs  lib.rs  sqlite_store.rs
crates/sapphire-sync/: CHANGELOG.md  Cargo.toml
crates/sapphire-track/: Cargo.toml
crates/sapphire-track/src/: lib.rs
crates/sapphire-workspace-cli/: Cargo.toml
docs/: ARCHITECTURE.md  HANDOFF.md
src/: error.rs  indexer.rs  lib.rs  workspace.rs  workspace_state.rs
