[workspace]
resolver = "3"
members = [
    "crates/sapphire-framework-track",
    "crates/sapphire-framework-retrieve",
    "crates/sapphire-framework-sync",
    "crates/sapphire-framework-workspace",
    "crates/sapphire-framework-workspace-cli",
]

[workspace.package]
version = "0.1.0"
description = "Local-first framework for file-based workspaces: indexing, search, sync, remote and WASM backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/sapphire-framework"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
# Pinned to 0.37 to match matrix-sdk-sqlite (libsqlite3-sys 0.35) so sapphire-agent's
# dependency graph has a single libsqlite3-sys (links = "sqlite3") and avoids link conflict.
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1" }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
dirs = "5"

[profile.dev.package."*"]
opt-level = 1
