[package]
name = "sapphire-framework-remote-client"
version.workspace = true
edition.workspace = true
description = "JSON-RPC remote sync client for sapphire-framework"
license.workspace = true
repository.workspace = true
keywords = ["sync", "client", "json-rpc", "reqwest"]
categories = ["web-programming::http-client"]

[dependencies]
sapphire-rpc = { package = "sapphire-framework-rpc", version = "0.1.0", path = "../sapphire-framework-rpc" }
reqwest.workspace = true
tokio = { workspace = true, features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true

[dev-dependencies]
sapphire-remote-server = { package = "sapphire-framework-remote-server", version = "0.1.0", path = "../sapphire-framework-remote-server" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
axum.workspace = true
tempfile = "3"
chrono = { workspace = true }
