[package]
name = "sapphire-framework-sync"
edition.workspace = true
version.workspace = true
description = "Git-based workspace synchronization library"
license.workspace = true
repository.workspace = true
keywords = ["sync", "git", "workspace"]
categories = ["filesystem"]

[features]
default = ["git"]
git = ["dep:git2", "dep:dirs", "dep:walkdir"]

[dependencies]
sapphire-rpc = { package = "sapphire-framework-rpc", version = "0.1.0", path = "../sapphire-framework-rpc" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true }
uuid = { workspace = true }
async-trait.workspace = true
dirs = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
git2 = { version = "0.21", default-features = false, features = ["ssh", "https"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
