[package]
name = "sapphire-framework-workspace-cli"
edition.workspace = true
version = "0.1.0"
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "sapphire-workspace"
path = "src/main.rs"

[features]
default = ["redb-store", "fastembed-embed", "git-sync"]
redb-store      = ["sapphire-workspace/redb-store"]
lancedb-store   = ["sapphire-workspace/lancedb-store"]
fastembed-embed = ["sapphire-workspace/fastembed-embed"]
git-sync        = ["sapphire-workspace/git-sync"]

[dependencies]
sapphire-workspace = { package = "sapphire-framework-workspace", version = "0.1.0", path = "../sapphire-framework-workspace", default-features = false }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
rmcp.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify = "8"
notify-debouncer-mini = "0.7"
config = { version = "0.15", default-features = false, features = ["toml"] }
dirs = "6"
toml.workspace = true
uuid.workspace = true
chrono = { workspace = true }
hostname = "0.4"
